fix rating alignment

--- a/less/viewdetails.less
+++ b/less/viewdetails.less
@@ -8,7 +8,9 @@
 }
 
 
-
+.rating-block {
+  display: inline-block;
+}
 .ficontent, .fpcontent {
   display: -webkit-box;
   display: -moz-box;
@@ -39,7 +41,7 @@
 .ficontent {
   height: auto;
   padding: 15px;
-  h4 { 
+  h4 {
     [class*="icon-"] {
       color: #FFAA45;
       font-weight: bold;
@@ -183,7 +185,7 @@
     .ctxt {
       width: 100%;
     }
-    .fportrait { 
+    .fportrait {
       margin: 0 16px 0 0;
     }
     .ctxt {
@@ -243,7 +245,7 @@
       clear:both;
     }
   }
-  .row-list.view-details-section { 
+  .row-list.view-details-section {
     .associated-documents {
       margin-bottom: 20px;
       margin-top: 6px;
@@ -259,7 +261,7 @@
   }
 
   .row-list .list-item.new-outing {
-    margin-top: 20px;  
+    margin-top: 20px;
   }
   .row-list {
 
@@ -341,7 +343,7 @@
     }
     figure {
       width: 33.33%;
-   
+
 
       @media @desktop {
         width: 50%;
@@ -413,7 +415,7 @@
       font-size: 2.8em;
       .icons-header {
         margin: 10px 0 0;
-        
+
         .route-activity,   .waypoint-type {
           color: #FFAA45;
           background: #fff;
@@ -530,7 +532,7 @@
     }
   }
 
-} 
+}
 
 .view-details-associations .associated-documents {
   display: flex;
@@ -896,7 +898,7 @@
       @media @phone {
         font-size: 2em;
       }
-      
+
       &:after {
         content: "";
         border-top: 3px solid #ea3636;
@@ -1122,7 +1124,7 @@
   .other-langs {
     clear: both;
   }
-} 
+}
 
 .view-details-map {
   height: 230px!important;
@@ -1311,7 +1313,7 @@ app-add-association {
     max-width: 100%;
   }
   img.image.full-image {
-    margin-bottom: 20px;  
+    margin-bottom: 20px;
   }
 
   @media @phone {
